# compute-substrate

./: .gitignore  Cargo.toml  README.md  spawn_miners.sh  tx.json
docs/: getting-started.md
scripts/: soak.sh  staging.sh
src/: lib.rs  main.rs  pow.rs  testutil.rs
tests/: app_payload_robustness.rs  consensus_accepts_attest_on_last_valid_epoch.rs  consensus_accepts_propose_then_attest_in_same_block.rs  consensus_accepts_propose_with_expires_epoch_equal_current.rs  consensus_accepts_valid_pow_block.rs  consensus_rejects_attest_after_proposal_expired.rs  consensus_rejects_attest_before_proposal_in_same_block.rs  consensus_rejects_attest_on_unknown_proposal.rs  consensus_rejects_bad_coinbase_script_sig_format.rs  consensus_rejects_bad_scriptsig_length.rs  consensus_rejects_coinbase_reward_plus_fees_mismatch.rs  consensus_rejects_coinbase_script_sig_height_mismatch.rs  consensus_rejects_coinbase_with_app_payload.rs  consensus_rejects_coinbase_with_multiple_outputs.rs  consensus_rejects_coinbase_with_wrong_value_when_fees_present.rs  consensus_rejects_coinbase_wrong_locktime_height.rs  consensus_rejects_duplicate_attest_txids.rs  consensus_rejects_duplicate_inputs_in_tx.rs  consensus_rejects_duplicate_propose_txids.rs  consensus_rejects_duplicate_txids_in_block.rs  consensus_rejects_empty_app_fields.rs  consensus_rejects_invalid_blocks.rs  consensus_rejects_invalid_tx_in_block.rs  consensus_rejects_multiple_coinbases.rs  consensus_rejects_non_first_coinbase.rs  consensus_rejects_oversized_app_fields.rs  consensus_rejects_propose_with_expires_epoch_in_past.rs  consensus_rejects_zero_fee_app_txs.rs  golden_vectors.rs  mempool_global_cap_and_deterministic_eviction.rs  mempool_policy_ordering_and_eviction.rs  mempool_prune_after_reorg.rs  mempool_remove_mined_block.rs  mempool_standardness_rejection.rs  mine_one_rebases_on_tip_change.rs  p2p_admission_parity.rs  (+20 more)
(+40 files in other folders)
