[package]
name = "csd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"
rand = "0.8"


async-trait = "0.1"

serde_json = "1.0"
sha2 = "0.10"
ripemd = "0.1"
blake3 = "1.5"
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }

sled = "0.34"

clap = { version = "4.5", features = ["derive"] }

tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal", "time"] }
axum = "0.7"

libp2p = { version = "0.54", features = ["tcp", "dns", "noise", "yamux", "gossipsub", "kad", "request-response", "tokio", "macros"] }
futures = "0.3"
