[package]
name = "csd"
version = "0.1.0"
edition = "2021"

[dependencies]

parking_lot = "0.12"

# --- Error handling ---
anyhow = "1.0"
thiserror = "1.0"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
serde_bytes = "0.11"

# --- Utilities ---
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"

# --- Math ---
num-bigint = "0.4"
num-traits = "0.2"

# --- Async ---
async-trait = "0.1"
futures = "0.3"

# --- Cryptography ---
tempfile = "3"
sha2 = "0.10"
ripemd = "0.1"
blake3 = "1.5"
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
zeroize = "1.7"


# --- Storage ---
sled = "0.34"

# --- CLI ---
clap = { version = "4.5", features = ["derive"] }

# --- Runtime & API ---
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal", "time"] }
axum = "0.7"

# --- Networking ---
libp2p = {     version = "0.54", features = [   "tcp",  "dns",  "noise",  "yamux",  "gossipsub", "request-response", "tokio",  "macros"  ]}

[features]
default = []
test-bypass = []
explorer-index = []
